--- a/argocd/apps/authentik/app.yaml
+++ b/argocd/apps/authentik/app.yaml
@@ -51,6 +51,9 @@ spec:
             enabled: true
             hosts:
               - authentik.k8s.yanello.net
+            annotations:
+              nginx.ingress.kubernetes.io/configuration-snippet: |
+                    more_set_headers "X-Forwarded-For $http_x_forwarded_for";
         redis:
           enabled: true
           master:
