ingress use forwarded headers

--- a/argocd/apps/ingress-nginx/app.yaml
+++ b/argocd/apps/ingress-nginx/app.yaml
@@ -23,6 +23,12 @@ spec:
     helm:
       releaseName: ingress-nginx
       passCredentials: false
+      valuesObject:
+        controller:
+          config:
+            use-forwarded-headers: "true"
+            
+      
       # parameters:
       #   - name: "controller.metrics.enabled"
       #     value: "true"
