increase auth replicas

--- a/argocd/apps/authentik/app.yaml
+++ b/argocd/apps/authentik/app.yaml
@@ -51,6 +51,7 @@ spec:
             enabled: true
             hosts:
               - authentik.k8s.yanello.net
+          replicas: 3
         redis:
           enabled: true
           master:
