--- a/argocd/apps/authentik/app.yaml
+++ b/argocd/apps/authentik/app.yaml
@@ -52,6 +52,8 @@ spec:
             hosts:
               - authentik.k8s.yanello.net
           replicas: 3
+        worker:
+          replicas: 3
         redis:
           enabled: true
           master:
