--- a/argocd/apps/vaultwarden/app.yaml
+++ b/argocd/apps/vaultwarden/app.yaml
@@ -40,9 +40,11 @@ spec:
               class: nfs-storage
               keepPvc: true
               accessMode: ReadWriteMany
+              path: /bitwarden/data
             attachments:
               name: vaultwarden-data
               keepPvc: true
               accessMode: ReadWriteMany
               size: 15Gi
               class: nfs-storage
+              path: /bitwarden/attachments
