--- a/argocd/apps/nfs/app.yaml
+++ b/argocd/apps/nfs/app.yaml
@@ -30,7 +30,7 @@ spec:
           path: /zpool/k8s/
         storageClass:
           onDelete: retain
-          pathPattern: ${.PVC.namespace}.${.PVC.name}
+          pathPattern: ${.PVC.namespace}/${.PVC.name}
           name: nfs-storage
           provisionerName: k8s-sigs.io/nfs-storage
   destination:
