--- a/argocd/apps/ingress-nginx/app.yaml
+++ b/argocd/apps/ingress-nginx/app.yaml
@@ -27,7 +27,8 @@ spec:
         controller:
           config:
             use-forwarded-headers: "true"
-            
+            proxy-read-timeout: "3600"
+            proxy-send-timeout: "3600"
       
       # parameters:
       #   - name: "controller.metrics.enabled"
