--- a/argocd/apps/ytdl/manifests/pvc.yaml
+++ b/argocd/apps/ytdl/manifests/pvc.yaml
@@ -9,3 +9,16 @@ spec:
   resources:
     requests:
       storage: 100Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  labels:
+    io.kompose.service: mongodb
+  name: mongodb
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 100Mi
