--- a/argocd/apps/ytdl/manifests/deploy.yaml
+++ b/argocd/apps/ytdl/manifests/deploy.yaml
@@ -50,3 +50,36 @@ spec:
         - name: data
           persistentVolumeClaim:
             claimName: data
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  annotations:
+    kompose.cmd: kompose -f ytdl.yaml convert
+    kompose.version: 1.35.0 (HEAD)
+  labels:
+    io.kompose.service: ytdl-mongo-db
+  name: ytdl-mongo-db
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      io.kompose.service: ytdl-mongo-db
+  strategy:
+    type: Recreate
+  template:
+    metadata:
+      labels:
+        io.kompose.service: ytdl-mongo-db
+    spec:
+      containers:
+        - image: mongo:4:.18
+          name: ytdl-mongo-db
+          volumeMounts:
+            - mountPath: /data/db
+              name: mongodb
+      restartPolicy: Always
+      volumes:
+        - name: mongodb
+          persistentVolumeClaim:
+            claimName: mongodb
