--- a/argocd/apps/ytdl/manifests/deploy.yaml
+++ b/argocd/apps/ytdl/manifests/deploy.yaml
@@ -73,7 +73,7 @@ spec:
         io.kompose.service: ytdl-mongo-db
     spec:
       containers:
-        - image: mongo:4:.18
+        - image: mongo:4.18
           name: ytdl-mongo-db
           volumeMounts:
             - mountPath: /data/db
