--- a/argocd/apps/ytdl/manifests/pvc.yaml
+++ b/argocd/apps/ytdl/manifests/pvc.yaml
@@ -15,7 +15,7 @@ kind: PersistentVolumeClaim
 metadata:
   labels:
     io.kompose.service: mongodb
-  name: mongodb
+  name: db
 spec:
   accessModes:
     - ReadWriteOnce
