reenable in favor of scaling down ytdl for now

--- a/argocd/apps/ytdl/app.yaml
+++ b/argocd/apps/ytdl/app.yaml
@@ -1,22 +1,22 @@
-# apiVersion: argoproj.io/v1alpha1
-# kind: Application
-# metadata:
-#   name: ytdl
-#   namespace: argocd
-#   finalizers:
-#   - resources-finalizer.argocd.argoproj.io
-# spec:
-#   destination:
-#     name: in-cluster
-#     namespace: ytdl
-#   project: default
-#   syncPolicy:
-#     automated:
-#       prune: true
-#       selfHeal: true
-#     syncOptions:
-#     - CreateNamespace=true
-#   source:
-#     repoURL: https://github.com/myanello/homelab.git
-#     targetRevision: HEAD
-#     path: argocd/apps/ytdl/manifests
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: ytdl
+  namespace: argocd
+  finalizers:
+  - resources-finalizer.argocd.argoproj.io
+spec:
+  destination:
+    name: in-cluster
+    namespace: ytdl
+  project: default
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+    syncOptions:
+    - CreateNamespace=true
+  source:
+    repoURL: https://github.com/myanello/homelab.git
+    targetRevision: HEAD
+    path: argocd/apps/ytdl/manifests
