--- a/argocd/apps/ytdl/manifests/deploy.yaml
+++ b/argocd/apps/ytdl/manifests/deploy.yaml
@@ -24,6 +24,11 @@ spec:
     spec:
       nodeSelector:
         beta.kubernetes.io/arch: arm64
+      initContainers:
+        - name: wait-for-mongodb
+          image: busybox:1.28
+          command: ['sh', '-c', 
+            'until nc -z ytdl-mongo-db 27017; do echo waiting for mongodb; sleep 2; done;']
       containers:
         - env:
             - name: ALLOW_CONFIG_MUTATIONS
@@ -119,7 +124,27 @@ spec:
           volumeMounts:
             - mountPath: /data/db
               name: db
-      restartPolicy: Always
+          startupProbe:
+            httpGet:
+              path: /
+              port: 17442
+            failureThreshold: 30
+            periodSeconds: 10
+          readinessProbe:
+            tcpSocket:
+              port: 27017
+            initialDelaySeconds: 15
+            periodSeconds: 10
+            timeoutSeconds: 5
+            failureThreshold: 3
+          livenessProbe:
+            tcpSocket:
+              port: 27017
+            initialDelaySeconds: 30
+            periodSeconds: 15
+            timeoutSeconds: 5
+            failureThreshold: 3
+  restartPolicy: Always
       volumes:
         - name: db
           persistentVolumeClaim:
