--- a/argocd/apps/ytdl/manifests/deploy.yaml
+++ b/argocd/apps/ytdl/manifests/deploy.yaml
@@ -124,8 +124,7 @@ spec:
             - mountPath: /data/db
               name: db
           startupProbe:
-            httpGet:
-              path: /
+            tcpSocket:
               port: 27017
             failureThreshold: 30
             periodSeconds: 10
