--- a/argocd/apps/cert-manager/app.yaml
+++ b/argocd/apps/cert-manager/app.yaml
@@ -23,3 +23,7 @@ spec:
     helm:
       valuesObject:
         installCRDs: true
+        config:
+          featureGates:
+            NameConstraints: true
+        
