--- a/argocd/apps/cert-manager/app.yaml
+++ b/argocd/apps/cert-manager/app.yaml
@@ -23,5 +23,5 @@ spec:
     helm:
       valuesObject:
         installCRDs: true
-        featureGates: NameConstraints
+        featureGates: NameConstraints=true
         
