--- a/argocd/apps/cert-manager/app.yaml
+++ b/argocd/apps/cert-manager/app.yaml
@@ -24,4 +24,5 @@ spec:
       valuesObject:
         installCRDs: true
         featureGates: NameConstraints=true
-        
+        webhook:
+          featureGates: NameConstraints=true
