--- a/argocd/apps/kubeshark/app.yaml
+++ b/argocd/apps/kubeshark/app.yaml
@@ -23,15 +23,16 @@ spec:
       valuesObject:
         tap:
           nodeSelectorTerms:
-          - matchExpressions:
-            - key: kubernetes.io/os
-              operator: In
-              values:
-              - linux
-            - key: kubernetes.io/arch
-              operator: NotIn
-              values:
-              - arm64
+            workers:
+            - matchExpressions:
+              - key: kubernetes.io/os
+                operator: In
+                values:
+                - linux
+              - key: kubernetes.io/arch
+                operator: NotIn
+                values:
+                - arm64
           ingress:
             enabled: true
             className: "nginx"
