--- a/argocd/apps/ytdl/manifests/ingress.yaml
+++ b/argocd/apps/ytdl/manifests/ingress.yaml
@@ -5,6 +5,10 @@ metadata:
   namespace: ytdl
 spec:
   ingressClassName: nginx
+  tls:
+    - hosts:
+        - ytdl.yanello.net
+      secretName: ytdl-cert-secret
   rules:
     - host: ytdl.yanello.net
       http:
