--- a/argocd/apps/ytdl/manifests/ingress.yaml
+++ b/argocd/apps/ytdl/manifests/ingress.yaml
@@ -8,6 +8,8 @@ metadata:
     cert-manager.io/common-name: "ytdl.yanello.net"
     nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
     nginx.ingress.kubernetes.io/auth-tls-secret: "ytdl/internal-ca-secret"
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
 spec:
   ingressClassName: nginx
   tls:
