--- a/argocd/apps/ytdl/manifests/ingress.yaml
+++ b/argocd/apps/ytdl/manifests/ingress.yaml
@@ -6,6 +6,7 @@ metadata:
   annotations:
     cert-manager.io/cluster-issuer: local-intermediate-ca1-issuer
     cert-manager.io/common-name: "ytdl.yanello.net"
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
 spec:
   ingressClassName: nginx
   tls:
