--- a/argocd/apps/ingress-nginx/app.yaml
+++ b/argocd/apps/ingress-nginx/app.yaml
@@ -30,6 +30,7 @@ spec:
             use-forwarded-headers: "true"
             proxy-read-timeout: "3600"
             proxy-send-timeout: "3600"
+            default-ssl-certificate: "ingress-nginx/default-cert"
           service:
             annotations:
               metallb.universe.tf/loadBalancerIPs: 10.10.8.0
