--- a/argocd/apps/ingress-nginx/app.yaml
+++ b/argocd/apps/ingress-nginx/app.yaml
@@ -30,8 +30,9 @@ spec:
             use-forwarded-headers: "true"
             proxy-read-timeout: "3600"
             proxy-send-timeout: "3600"
-            default-ssl-certificate: "ingress-nginx/default-ingress-cert"
             force-ssl-redirect: "true"
+          extraArgs:
+            default-ssl-certificate: "ingress-nginx/default-ingress-cert"
           service:
             annotations:
               metallb.universe.tf/loadBalancerIPs: 10.10.8.0
