--- a/argocd/apps/frigate/app.yaml
+++ b/argocd/apps/frigate/app.yaml
@@ -20,6 +20,8 @@ spec:
     targetRevision: "*"
     chart: frigate
     helm:
+      valueFiles:
+        - conf.yaml
       valuesObject:
         nodeSelector:
           beta.kubernetes.io/arch: arm64
