--- a/argocd/apps/frigate/app.yaml
+++ b/argocd/apps/frigate/app.yaml
@@ -15,276 +15,40 @@ spec:
     name: in-cluster
     namespace: frigate
   project: default
-  source:
-    repoURL: https://blakeblackshear.github.io/blakeshome-charts/
-    targetRevision: "*"
-    chart: frigate
-    helm:
-      valueFiles:
-        - ./conf.yaml
-      valuesObject:
-        nodeSelector:
-          beta.kubernetes.io/arch: arm64
-        image:
-          tag: stable
-          pullPolicy: IfNotPresent
-        ingress:
-          enabled: true
-          ingressClassName: nginx
-          hosts:
-            - host: frigate.k8s.yanello.net
-              paths: 
-                - path: "/"
-                  portName: http
-        persistence:
-          media:
+  sources:
+    - repoURL: https://blakeblackshear.github.io/blakeshome-charts/
+      targetRevision: "*"
+      chart: frigate
+      helm:
+        valuesFiles:
+          $values/conf.yaml
+        valuesObject:
+          nodeSelector:
+            beta.kubernetes.io/arch: arm64
+          image:
+            tag: stable
+            pullPolicy: IfNotPresent
+          ingress:
             enabled: true
-            storageClass: nfs-storage
-            subPath: media
-            accessMode: ReadWriteOnce
-            size: 1Ti
-        envFromSecrets:
-          - frigate-secrets
-        config: |
-          mqtt:
-            host: 192.168.1.4
-            port: 1883
-            topic_prefix: frigate
-            client_id: frigate
-            user: mosquitto
-            password: yanello4656
-          
-          detectors:
-            # coral:
-            #   type: edgetpu
-            #   device: pci:0
-            cpu1:
-              type: cpu
-          
-          model:
-            labelmap:
-              1: vehicle
-              2: vehicle
-              3: vehicle
-              5: vehicle
-              7: vehicle
-              15: animal
-              16: animal
-              17: animal
-              18: animal
-              19: animal
-              20: animal
-              21: animal
-              22: animal
-              23: animal
-              24: animal
-          
-          birdseye:
-            # Optional: Enable birdseye view (default: shown below)
-            enabled: false
-            # Optional: Width of the output resolution (default: shown below)
-            width: 1920
-            # Optional: Height of the output resolution (default: shown below)
-            height: 1080
-            # Optional: Encoding quality of the mpeg1 feed (default: shown below)
-            # 1 is the highest quality, and 31 is the lowest. Lower quality feeds utilize less CPU resources.
-            quality: 1
-            # Optional: Mode of the view. Available options are: objects, motion, and continuous
-            #   objects - cameras are included if they have had a tracked object within the last 30 seconds
-            #   motion - cameras are included if motion was detected in the last 30 seconds
-            #   continuous - all cameras are included always
-            mode: continuous
-          
-          # ffmpeg:
-          #   hwaccel_args: preset-nvidia-h264
-          
-          detect:
-            width: 1280 
-            height: 720 
-            fps: 5
-            enabled: true
-            max_disappeared: 25
-          
-          objects:
-            track:
-              - person
-              - animal
-              - vehicle
-            filters:
-              person:
-                min_score: 0.5
-                threshold: 0.7
-                min_area: 8000
-              vehicle:
-                min_score: 0.7
-                threshold: 0.85
-                min_area: 22000
-          
-          record:
-            enabled: true
-            retain:
-              days: 1
-              mode: all
-            events:
-              retain:
-                default: 7
-                mode: active_objects
-          
-          snapshots:
-            enabled: true
-            timestamp: true
-            bounding_box: false
-            crop: false
-            retain:
-              default: 7
-          
-          live:
-            height: 720
-            quality: 8
-          
-          timestamp_style:
-            #"tl" (top left), "tr" (top right), "bl" (bottom left), "br" (bottom right)
-            position: tl
-            format: '%m/%d/%Y %H:%M:%S'
-            color:
-              red: 255
-              green: 255
-              blue: 255
-            thickness: 1
-            effect: solid
-          cameras:
-            Pool:
-              ffmpeg:
-                inputs:
-                  - path: rtsp://admin:${FRIGATE_RTSP_PASSWORD}@192.168.20.20:554/ch02/0
-                    roles:
-                      - record
-                      - detect
-              zones:
-                pool:
-                  coordinates: 350,368,324,501,948,499,913,319,862,116,492,74,92,124,0,364
-                  objects:
-                    - person
-                    - animal
-            Back:
-              ffmpeg:
-                inputs:
-                  - path: rtsp://admin:${FRIGATE_RTSP_PASSWORD}@192.168.20.20:554/ch03/0
-                    roles:
-                      - record
-                      - detect
-              zones:
-                back_yard:
-                  coordinates: 
-                    0,253,429,260,569,720,837,720,1280,720,1184,477,1066,310,951,170,801,0,566,0,268,0,0,0
-                  objects:
-                    - person
-                    - animal
-                pool:
-                  coordinates: 553,641,489,462,425,296,235,302,99,309,91,273,0,283,0,694
-                  objects:
-                    - person
-                    - animal
-                    - vehicle
-              motion:
-                mask:
-                  - 1280,720,775,0,1280,0,1280,0,1280,0
-            Front_Left:
-              ffmpeg:
-                inputs:
-                  - path: rtsp://admin:${FRIGATE_RTSP_PASSWORD}@192.168.20.20:554/ch01/0
-                    roles:
-                      - record
-                      - detect
-              zones:
-                front_yard:
-                  coordinates: 572,720,575,596,652,529,733,458,308,445,198,720
-                  objects:
-                    - person
-                    - animal
-                    - vehicle
-                driveway:
-                  coordinates: 
-                    1208,414,1280,462,1280,558,1280,720,1057,720,920,720,797,720,707,720,572,720,575,611,701,484,791,430
-                  objects:
-                    - person
-                    - animal
-                    - vehicle
-                sidewalk:
-                  coordinates: 281,440,815,425,774,342,682,317,332,319
-                  objects:
-                    - animal
-                street:
-                  coordinates: 0,258,230,225,641,225,994,234,1280,287,1280,395,0,395
-                  objects:
-                    - person
-                    - animal
-                    - vehicle
-              snapshots:
-                required_zones:
-                  - driveway
-                  - sidewalk
-                  - front_yard
-              motion:
-                mask:
-                  #- 0,582,0,420,0,0,367,0,1280,0,1280,347,1112,340,727,321,303,323,287,380,265,555,261,720,0,720
-                  - 0,496,391,466,679,624,885,720,0,720          
-              review:
-                alerts:
-                  required_zones:
-                    - driveway
-                    - front_yard
-                    - sidewalk
-            Front_Right:
-              ffmpeg:
-                inputs:
-                  - path: rtsp://admin:${FRIGATE_RTSP_PASSWORD}@192.168.20.20:554/ch04/0
-                    roles:
-                      - record
-                      - detect
-              zones:
-                front_yard:
-                  coordinates: 0.365,1,0.629,1,0.625,0.825,0.605,0.398,0.153,0.437,0.055,0.736,0,1,0.087,1,0,1
-                  objects:
-                    - person
-                    - animal
-                  inertia: 3
-                  loitering_time: 0
-                driveway:
-                  coordinates: 21,638,0,644,0,338,199,313
-                  objects:
-                    - person
-                    - animal
-                    - vehicle
-                sidewalk:
-                  coordinates: 0.151,0.44,0.224,0.311,0.588,0.271,0.605,0.393
-                  objects: animal
-                  inertia: 3
-                  loitering_time: 0
-                street:
-                  coordinates: 0,193,335,96,672,61,1008,66,1280,116,1280,274,0,321
-                  objects:
-                    - person
-                    - animal
-                    - vehicle
-              objects:
-                filters:
-                  animal: {}
-              snapshots:
-                required_zones:
-                  - driveway
-                  - sidewalk
-                  - front_yard
-              #motion:
-                #mask:
-                # - 716,457,512,476,505,202,299,224,0,272,0,0,720,0,1280,0,1280,720,837,720
-              review:
-                alerts:
-                  required_zones:
-                    - driveway
-                    - sidewalk
-                    - front_yard
-          version: 0.14
+            ingressClassName: nginx
+            hosts:
+              - host: frigate.k8s.yanello.net
+                paths: 
+                  - path: "/"
+                    portName: http
+          persistence:
+            media:
+              enabled: true
+              storageClass: nfs-storage
+              subPath: media
+              accessMode: ReadWriteOnce
+              size: 1Ti
+          envFromSecrets:
+            - frigate-secrets
+    - repoURL: https://github.com/myanello/homelab.git
+      targetRevision: HEAD
+      path: argocd/apps/frigate
+      ref: values
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
