--- a/argocd/apps/frigate/app.yaml
+++ b/argocd/apps/frigate/app.yaml
@@ -20,7 +20,7 @@ spec:
       targetRevision: "*"
       chart: frigate
       helm:
-        valuesFiles:
+        valueFiles:
           - $values/argocd/apps/frigate/config.yaml
         valuesObject:
           nodeSelector:
